RESOLVED FIXED 136410
REGRESSION (r168217): Images are cropped out during animation at jetblue.com
https://bugs.webkit.org/show_bug.cgi?id=136410
Summary REGRESSION (r168217): Images are cropped out during animation at jetblue.com
mitz
Reported 2014-08-30 23:59:56 PDT
To reproduce: navigate to the URL and scroll down to the “Sweet seats” section, and click one of the horizontal arrow buttons. As the content scrolls in, the image is partially cropped out during the transition, and the missing part only pops in at the end. This was caused by <http://trac.webkit.org/r168217>, the fix for bug 132507.
Attachments
Patch (13.85 KB, patch)
2014-12-12 14:23 PST, Simon Fraser (smfr)
no flags
Patch (2.04 KB, patch)
2014-12-12 15:33 PST, Simon Fraser (smfr)
no flags
Patch (15.94 KB, patch)
2014-12-15 12:03 PST, Simon Fraser (smfr)
thorton: review+
mitz
Comment 1 2014-08-31 00:00:45 PDT
Simon Fraser (smfr)
Comment 2 2014-12-12 14:23:13 PST
Simon Fraser (smfr)
Comment 3 2014-12-12 14:52:40 PST
Simon Fraser (smfr)
Comment 4 2014-12-12 15:33:48 PST
Reopening to attach new patch.
Simon Fraser (smfr)
Comment 5 2014-12-12 15:33:49 PST
Simon Fraser (smfr)
Comment 6 2014-12-12 15:45:24 PST
Alexey Proskuryakov
Comment 7 2014-12-14 18:44:19 PST
r177238 introduced memory corruption on a regression test. Will roll out. run-webkit-tests -g transitions/transition-end-event-destroy-iframe.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x000000010760af00 WebCore::AnimationControllerPrivate::endAnimationUpdate() + 16 1 com.apple.WebCore 0x00000001076186b8 WebCore::AnimationPrivateUpdateBlock::~AnimationPrivateUpdateBlock() + 24 2 com.apple.WebCore 0x000000010760d065 WebCore::AnimationPrivateUpdateBlock::~AnimationPrivateUpdateBlock() + 21 3 com.apple.WebCore 0x00000001076098b4 WebCore::AnimationControllerPrivate::animationTimerFired() + 68 4 com.apple.WebCore 0x0000000107616303 std::__1::__function::__func<std::__1::__bind<void (WebCore::AnimationControllerPrivate::*&)(), WebCore::AnimationControllerPrivate*>, std::__1::allocator<std::__1::__bind<void (WebCore::AnimationControllerPrivate::*&)(), WebCore::AnimationControllerPrivate*> >, void ()>::operator()() + 259 5 com.apple.WebCore 0x00000001075dcb4a std::__1::function<void ()>::operator()() const + 26 6 com.apple.WebCore 0x00000001075dcafc WebCore::Timer::fired() + 28
WebKit Commit Bot
Comment 8 2014-12-14 18:46:04 PST
Re-opened since this is blocked by bug 139632
Simon Fraser (smfr)
Comment 9 2014-12-15 12:03:39 PST
Simon Fraser (smfr)
Comment 10 2014-12-15 12:24:32 PST
Note You need to log in before you can comment on or make changes to this bug.