REGRESSION (r168217): Images are cropped out during animation at jetblue.com https://bugs.webkit.org/show_bug.cgi?id=136410

Reviewed by Dean Jackson.

We were hitting the new assertion under Page::setPageScaleFactor(), which
calls recalcStyle(), so move the AnimationUpdateBlock from updateStyleIfNeeded()
to recalcStyle().

* dom/Document.cpp:
(WebCore::Document::recalcStyle):
(WebCore::Document::updateStyleIfNeeded):

Canonical link: https://commits.webkit.org/157484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177244 268f45cc-cd09-0410-ab3c-d52691b4dbfc